# SlashGames

./: CMakeLists.txt  LICENSE  README.md  authorizationwindow.cpp  authorizationwindow.h  authorizationwindow.ui  customstyle.cpp  customstyle.h  customwindow.cpp  customwindow.h  customwindow.ui  databasemanagement.cpp  databasemanagement.h  deletegamedialog.cpp  deletegamedialog.h  deletegamedialog.ui  faqwindow.cpp  faqwindow.h  faqwindow.ui  gameinputdialog.cpp  gameinputdialog.h  imagesRes.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  roulette.cpp  roulette.h  roulette.ui  slotwindow.cpp  slotwindow.h  slotwindow.ui
Database/: databasemanagement.cpp  databasemanagement.h
GameManager/: gamemanager.cpp  gamemanager.h
Slots/: animFunc.h  slotsgame.cpp  slotsgame.h  slotsgame.ui
Slots1/: CMakeLists.txt  animFunc.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Style/: customstyle.cpp  customstyle.h
Windows/Authorization/: authorizationwindow.cpp  authorizationwindow.h  authorizationwindow.ui
Windows/Balance/: balancewindow.cpp  balancewindow.h  balancewindow.ui
Windows/Custom/: customwindow.cpp  customwindow.h  customwindow.ui
Windows/FaQ/: faqwindow.cpp  faqwindow.h  faqwindow.ui
Windows/GameInput/: gameinputdialog.cpp  gameinputdialog.h  gameinputdialog.ui
Windows/Main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: phone-code-data.csv  resources.qrc
resources/data/: bin_code.csv
